--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1690,3 +1690,113 @@ border-radius: 20px;
 .business_page.industries_page .content_business .grid_container .col.img_container img{
   width: 100%;
 }
+.blog_page .grid_container_blogs{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap:2rem
+}
+.blog_page .grid_container_blogs .col.span_2{
+  grid-column: span 2;
+  display: grid;
+  gap:1rem;
+  row-gap: 2rem;
+  grid-template-columns: repeat(2, 1fr);
+}
+.blog_page .grid_container_blogs .col.span_2 .single_blog{
+  width: 95%;
+    display: flex
+;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+ .blog_page .grid_container_blogs .col.span_2 .single_blog .desc{
+  padding: 0.5rem 0 2rem;
+}
+.blog_page .grid_container_blogs .col{
+  display: flex
+;
+    flex-direction: column;
+    gap: 1rem;
+}
+.blog_page .grid_container_blogs .boxes{
+  background-color: #F2F2F2;
+  width:100%
+}
+.blog_page .grid_container_blogs .box_content{
+  display: flex
+;
+    flex-direction: column;
+    gap: 2rem;
+    width: 85%;
+    margin: 0 auto;
+    padding: 2rem 0;
+}
+.blog_page .grid_container_blogs .box_content .title{
+  font-size: 19px;
+  font-weight: 600;
+}
+.blog_page .grid_container_blogs .box_content .flex_row{
+  display: flex
+  ;
+      align-items: center;
+      justify-content: space-between;
+      padding: 1rem;
+      gap: 1rem;
+      background: #FFFFFF;
+      color: #5D666F;
+      transition: all 0.2s ease-in-out;
+}
+.blog_page .grid_container_blogs .box_content .flex_row:hover,
+.latest_post_img:hover{
+  transform: scale(1.02);
+}
+.blog_page .grid_container_blogs .box_content .flex_row img{
+  width:23px
+}
+.latest_post_img{
+  transition: all 0.3s ease-in-out;
+}
+
+.blog_page .grid_container_blogs .col.span_2 .single_blog .category,
+.blog_page .grid_container_blogs .col.span_2 .single_blog .desc{
+  color: #5d666f;
+  /* font-weight: 600; */
+}
+.blog_page .grid_container_blogs .recent_posts.boxes a{
+  display: flex;
+  gap:0.8rem;
+  align-items: center;
+}
+.blog_page .grid_container_blogs .recent_posts.boxes a img{
+  width: 44%;
+}
+.blog_page .grid_container_blogs .recent_posts.boxes a .desc{
+  display: flex
+  ;
+  flex-direction: column;
+  gap:0.3rem;
+  font-size: 14px;
+  color:#000
+
+}
+.blog_page .grid_container_blogs .recent_posts.boxes a .desc .flex{
+  display: flex
+  ;
+      gap: 0.5rem;
+      align-items: center;
+      color: #5d666f;
+}
+.blog_page .grid_container_blogs .recent_posts.boxes a .desc img{
+  width: 25px;
+}
+.blog_page .grid_container_blogs .col.span_2 .single_blog .category span{
+  font-weight: 600;
+}
+.blog_page .grid_container_blogs .col.span_2 .single_blog .title_blog_single{
+  font-weight: 600;
+  color: #424446;
+  font-size: 21px;
+}
+.blog_page .grid_container_blogs .col.span_2 .single_blog img{
+  width: 100%;
+}
