--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2286,3 +2286,79 @@ ease;
 .visas_page .col.order_ser .service .flex:hover .se_black {
   display: none;
 }
+.about_section{
+  display: none;
+}
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 1111;
+  transform: translate(-50%, -50%);
+  width: 70%;
+  margin: 0 auto;
+  background: #fff;
+  border-radius: 10px;
+  display: none; 
+}
+
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.6);
+  z-index: 1100;
+  display: none; 
+}
+.popup .abs_container {
+  margin: 0 auto;
+  padding: 2rem;
+}
+
+.popup .abs_container .popup_form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+}
+
+.popup .abs_container .popup_form .span_2 {
+  grid-column: span 2;
+}
+
+.popup .abs_container .popup_form .input_container .title {
+  font-weight: 600;
+}
+
+.popup .abs_container .popup_form .input_container textarea {
+  height: 100px;
+}
+
+.popup .abs_container .popup_form .input_container input,
+.popup .abs_container .popup_form .input_container textarea {
+  width: calc(100% - 2rem);
+  padding: 0.7rem;
+  font-size: 17px;
+  border: 1px solid #5D666F;
+  margin-top: 1rem;
+  outline: none;
+  border-radius: 4px;
+}
+.popup .abs_container .popup_form .input_container{
+  position: relative;
+}
+.popup button{
+  width: 120px;
+  height: 38px;
+  padding: 0;
+}
+.popup .input_container input.error-border,
+.popup .input_container textarea.error-border {
+  border-color: red;
+}
+.popup .error-message {
+ 
+  padding-top: 0.3rem;
+}
